--- a/Menu1.html
+++ b/Menu1.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <banner>
-<img src="https://i.postimg.cc/KjZD86QR/congkak.jpg" alt="https://i.postimg.cc/KjZD86QR/congkak.jpg style="width:1250px;height:400px;">
+<img src="https://i.postimg.cc/KjZD86QR/congkak.jpg" alt="https://i.postimg.cc/KjZD86QR/congkak.jpg" style="width:1250px;height:400px;">
 </banner>
 <br><br>
 <h1 style="text-align: center;"> CONGKAK </h1>
